--- a/style.css
+++ b/style.css
@@ -10,13 +10,14 @@ h1 {
 }
 section {
   display: flex;
+  margin-bottom:150px;
 }
 .half_width {
   width: 50%;
-  padding-left:2%;
+  padding-left:7%;
 }
 .half_width img {
-  width: 80%;
+  width: 90%;
 }
 .hire_me_class{
     text-decoration: none;
@@ -29,4 +30,9 @@ section {
 .top_banner{
     background-image: url(images/top-banner.png);
     background-repeat:no-repeat;
+}
+.section2{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
