--- a/style.css
+++ b/style.css
@@ -9,30 +9,60 @@ h1 {
   color: orange;
 }
 section {
+  margin-bottom: 150px;
+}
+.flexible_div {
   display: flex;
-  margin-bottom:150px;
 }
 .half_width {
   width: 50%;
-  padding-left:7%;
+  padding-left: 7%;
 }
 .half_width img {
   width: 90%;
 }
-.hire_me_class{
-    text-decoration: none;
-    background-image:linear-gradient(orange, tomato);
-    padding:10px 40px;
-    border-radius:5px;
-    color:white;
-    font-weight:700;
+.hire_me_class {
+  text-decoration: none;
+  background-image: linear-gradient(orange, tomato);
+  padding: 10px 40px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
 }
-.top_banner{
-    background-image: url(images/top-banner.png);
-    background-repeat:no-repeat;
+.top_banner {
+  background-image: url(images/top-banner.png);
+  background-repeat: no-repeat;
 }
-.section2{
-    background-image: url(images/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
+.section2 {
+  background-image: url(images/dream-bg.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.experience_item {
+  box-shadow: 10px 10px 40px gray;
+  width: 40%;
+  margin-right: 5%;
+  margin-left: 5%;
+  padding-left: 20px;
+}
+h2{
+  font-size:50px;
+}
+h3{
+  font-size:40px;
+}
+.Experiences_div{
+  background-image: url(images/exp-bg.png);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+#full_stack{
+  border-left: 7px solid tomato;
+}
+
+#baby_web{
+  border-left: 7px solid blue;
+}
+footer p{
+  text-align: center;
 }
